# Object-Detection-With-Canny

./: CMakeLists.txt
inc/: ClogiPy.h  Pred_utils.h  Prediction.h
src/: ClogiPy.cpp  Prediction.cpp  main.cpp
